--- a/app/views/expenditures/_form.html.erb
+++ b/app/views/expenditures/_form.html.erb
@@ -1,17 +1,20 @@
-<%= form_with(model: expenditure) do |form| %>
-  <% if expenditure.errors.any? %>
-    <div style="color: red">
-      <h2><%= pluralize(expenditure.errors.count, "error") %> prohibited this expenditure from being saved:</h2>
-
-      <ul>
-        <% expenditure.errors.each do |error| %>
-          <li><%= error.full_message %></li>
-        <% end %>
-      </ul>
-    </div>
-  <% end %>
+<%= form_with model: @expenditure, method: :post, scope: :new_expenditure do |f| %>
+  <div>
+    <%= f.label :name, class: 'form-label' %> <br>
+    <%= f.text_field :name, autofocus: true, placeholder: 'Expenditure name', class: 'form-control', required: true %>
+  </div>
 
   <div>
-    <%= form.submit %>
+    <%= f.label :amount, class: 'form-label' %> <br>
+    <%= f.number_field :amount, autofocus: true, placeholder: 'Expenditure amount ($)', class: 'form-control', required: true %>
   </div>
+  
+  <div>
+    <%= f.fields_for :group_payments do |cp| %>
+      <%= cp.label :group_ids, ' (atleast one)', class: 'form-label' %> <br>
+      <%= cp.collection_select :group_ids, @all_categories, :id, :name, {}, { multiple: true, required: true, class: 'form-select', size: 2 } %>
+    <% end %>
+  </div>
+
+  <%= f.submit 'Create', class: 'btn bg-pri w-100 text-light mt-4' %>
 <% end %>
