--- a/app/views/expenditures/new.html.erb
+++ b/app/views/expenditures/new.html.erb
@@ -1,9 +1,4 @@
-<h1>New expenditure</h1>
-
-<%= render "form", expenditure: @expenditure %>
-
-<br>
-
-<div>
-  <%= link_to "Back to expenditures", expenditures_path %>
-</div>
+<section>
+  <h2 class="text-center">Create an expenditure</h2>
+  <%= render form %>
+</section>
