--- a/app/views/groups/_form.html.erb
+++ b/app/views/groups/_form.html.erb
@@ -1,17 +1,13 @@
-<%= form_with(model: group) do |form| %>
-  <% if group.errors.any? %>
-    <div style="color: red">
-      <h2><%= pluralize(group.errors.count, "error") %> prohibited this group from being saved:</h2>
-
-      <ul>
-        <% group.errors.each do |error| %>
-          <li><%= error.full_message %></li>
-        <% end %>
-      </ul>
-    </div>
-  <% end %>
+<%= form_with model: @group, method: :post, scope: :new_group, html: {class: 'd-flex flex-column gap-3'} do |f| %>
+  <div>
+    <%= f.label :name, class: 'form-label' %> <br>
+    <%= f.text_field :name, autofocus: true, placeholder: 'Group name', class: 'form-control' %>
+  </div>
 
   <div>
-    <%= form.submit %>
+    <%= f.label :icon, class: 'form-label' %> <br>
+    <%= f.text_field :icon, autofocus: true, placeholder: 'Icon image URL', class: 'form-control' %>
   </div>
+
+  <%= f.submit 'Create', class: 'btn bg-pri w-100 text-light' %>
 <% end %>
