--- a/app/views/groups/index.html.erb
+++ b/app/views/groups/index.html.erb
@@ -1,14 +1,9 @@
-<p style="color: green"><%= notice %></p>
-
-<h1>Groups</h1>
-
-<div id="groups">
-  <% @groups.each do |group| %>
-    <%= render group %>
-    <p>
-      <%= link_to "Show this group", group %>
-    </p>
+<section>
+  <h2 class="text-center">Group</h2>
+  <% unless @groups.empty? %>
+    <%= render form %>
+  <% else %>
+    <p>No group available</p>
   <% end %>
-</div>
-
-<%= link_to "New group", new_group_path %>
+  <%= link_to 'Add a new group', new_group_path, class: 'btn bg-sec w-100 text-light' %>
+</section>
