--- a/app/views/groups/show.html.erb
+++ b/app/views/groups/show.html.erb
@@ -1,10 +1,4 @@
-<p style="color: green"><%= notice %></p>
-
-<%= render @group %>
-
-<div>
-  <%= link_to "Edit this group", edit_group_path(@group) %> |
-  <%= link_to "Back to groups", groups_path %>
-
-  <%= button_to "Destroy this group", @group, method: :delete %>
-</div>
+<section>
+  <h2 class="text-center">Create a group</h2>
+  <%= render form %>
+</section>
