--- a/app/views/groups/index.html.erb
+++ b/app/views/groups/index.html.erb
@@ -1,7 +1,7 @@
 <section>
   <h2 class="text-center">Group</h2>
   <% unless @groups.empty? %>
-    <%= render 'form' %>
+    <%= render 'group' %>
   <% else %>
     <p>No group available</p>
   <% end %>
